MQTT producer-consumer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,20 @@
 mp.messaging.outgoing.mqtt-message-out/1/2.connector=smallrye-mqtt
 mp.messaging.outgoing.mqtt-message-out/1/2.host=ex-aao-hdls-svc
 mp.messaging.outgoing.mqtt-message-out/1/2.port=61616
-mp.messaging.outgoing.mqtt-message-out/1/2.topic=mqtt-message-out/1/2
+mp.messaging.outgoing.mqtt-message-out/1/2.topic=mqtt-message-in/1/2
 mp.messaging.outgoing.mqtt-message-out/1/2.auto-generated-client-id=true
 
 
 # Configure the MQTT source (we read from it)
-# mp.messaging.incoming.mqtt-message-in/1/2.connector=smallrye-mqtt
-# mp.messaging.incoming.mqtt-message-in/1/2.topic=mqtt-message-in/1/2
-# mp.messaging.incoming.mqtt-message-in/1/2.host=ex-aao-hdls-svc
-# mp.messaging.incoming.mqtt-message-in/1/2.port=61616
-# mp.messaging.incoming.mqtt-message-in/1/2.auto-generated-client-id=true
+mp.messaging.incoming.mqtt-message-in/1/2.connector=smallrye-mqtt
+mp.messaging.incoming.mqtt-message-in/1/2.topic=mqtt-message-in/1/2
+mp.messaging.incoming.mqtt-message-in/1/2.host=ex-aao-hdls-svc
+mp.messaging.incoming.mqtt-message-in/1/2.port=61616
+mp.messaging.incoming.mqtt-message-in/1/2.auto-generated-client-id=true
+quarkus.log.level=INFO
+quarkus.log.category."org.hibernate".level=DEBUG
 
 # mp.messaging.outgoing.mqtt-message-in/1/3.connector=smallrye-kafka
 # mp.messaging.outgoing.mqtt-message-in/1/3.topic=mqtt-message-in/1/2
 # mp.messaging.outgoing.mqtt-message-in/1/3.bootstrap.servers=my-cluster-kafka-bootstrap:9092
 quarkus.tls.trust-all=true
-quarkus.log.level=INFO
-quarkus.log.category."org.hibernate".level=DEBUG
