--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>quarkus-messaging-mqtt</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.paho</groupId>
+      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+      <version>1.2.5</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
