duas formas de mqtt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 mp.messaging.outgoing.mqtt-message-out/1/2.connector=smallrye-mqtt
-mp.messaging.outgoing.mqtt-message-out/1/2.host=ex-aao-hdls-svc
+mp.messaging.outgoing.mqtt-message-out/1/2.host=localhost
 mp.messaging.outgoing.mqtt-message-out/1/2.port=61616
 mp.messaging.outgoing.mqtt-message-out/1/2.topic=mqtt-message-in/1/2
 mp.messaging.outgoing.mqtt-message-out/1/2.auto-generated-client-id=true
@@ -9,7 +9,7 @@ mp.messaging.outgoing.mqtt-message-out/1/2.auto-generated-client-id=true
 # Configure the MQTT source (we read from it)
 mp.messaging.incoming.mqtt-message-in/1/2.connector=smallrye-mqtt
 mp.messaging.incoming.mqtt-message-in/1/2.topic=mqtt-message-in/1/2
-mp.messaging.incoming.mqtt-message-in/1/2.host=ex-aao-hdls-svc
+mp.messaging.incoming.mqtt-message-in/1/2.host=localhost
 mp.messaging.incoming.mqtt-message-in/1/2.port=61616
 mp.messaging.incoming.mqtt-message-in/1/2.auto-generated-client-id=true
 quarkus.log.level=INFO
