--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ quarkus.kubernetes-client.trust-certs=true
 quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi9/openjdk-17
 quarkus.openshift.route.expose=true
 quarkus.openshift.deploy=true
+# teste
